2011-06-19  Keishi Hattori  <keishi@webkit.org>

Reviewed by Kent Tamura.

        Clicking indeterminate checkbox should flip checkedness state
        https://bugs.webkit.org/show_bug.cgi?id=62262

        * fast/forms/checkbox-click-indeterminate-expected.txt: Added.
        * fast/forms/checkbox-click-indeterminate.html: Added. Tests behavior when clicking indeterminate checkbox.
2011-06-19  Keishi Hattori  <keishi@webkit.org>

        Reviewed by Kent Tamura.

        Clicking indeterminate checkbox should flip checkedness state
        https://bugs.webkit.org/show_bug.cgi?id=62262

        Test: fast/forms/checkbox-click-indeterminate.html

        * html/CheckboxInputType.cpp:
        (WebCore::CheckboxInputType::willDispatchClick): Changed to flip checked flag when indeterminate.

Canonical link: https://commits.webkit.org/78558@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@89229 268f45cc-cd09-0410-ab3c-d52691b4dbfc